# searXNG-mcp-server

./: .env.example  Quickstart.md  README.md  pyproject.toml
docker-compose/: docker-compose.yaml  searxng-settings.yml
src/searxng_mcp/: __init__.py  __main__.py  config.py  models.py  searxng_client.py  server.py
