[project]
name = "searxng-mcp"
version = "0.1.0"
description = "MCP server for privacy-focused web search using SearXNG"
readme = "README.md"
authors = [
    { name = "BastianTeufel", email = "bastian.teufel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
searxng-mcp = "searxng_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
